@startuml

'title Ukázka závislostí mezi vrstvami

hide empty members
skinparam nodesep 100
skinparam ranksep 100

package "Transportní vrstva" {
    class ProofServiceServer <<gRPC Service>> {
    }
}

package "Servisní vrstva" {
    interface LedgerProver {
    }

    class LedgerService <<Application Service>> {

    }

    interface Ledger <<Port>> {

    }
}

package "Infrastrukturní vrstva" {
    class LedgerRepository <<Database Repository>> {

    }
}

ProofServiceServer --> LedgerProver

LedgerProver <|.. LedgerService
LedgerService -> Ledger
Ledger <|.. LedgerRepository

@enduml